Fix T44814: 'preview' icons would not greyout.

Since they are premultiplied, we need separated handling of colors and alpha blending
if we want additional alpha factor to work OK.